# flaskfinal

./: .gitignore  DBSETUP.md  formform.html  grprocedures.sql  main.py  main_books.py  mysqltest_ssh.py  pyproject.toml  scp.txt  searchWTF.py  todo.md
models/: bookinfo.py  byauthorid.py  bytitlesearch.py  byyearsearch.py  createuser.py  getauthors.py  getuser.py
static/: style.css
templates/: bookinfo.html  books.html  bytitle.html  byyear.html  index.html  login.html  loginform.html  newuser.html  titles.html
