[project]
name = "flask-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachelib>=0.13.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-argon2>=0.3.0.0",
    "flask-bcrypt>=1.0.1",
    "flask-session>=0.8.0",
    "mysql-connector-python>=9.6.0",
    "paramiko==3.5.1",
    "sshtunnel>=0.4.0",
]
